# devlens

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md  alembic.ini  git.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py  0002_add_chat_cache_knowledge_tasks.py  0003_add_knowledge_metadata_filters.py  0004_add_task_snooze_and_signature.py
docs/: setup.md  tui.md
docs/blueprint/: PROJECT_HANDOFF_STATUS.md  blueprint.md
docs/design/: design.md
docs/reqs/: PRD.docx  PRD.md  SRS.md
docs/reqs/design/: design.md
scripts/: bootstrap.sh  devlens.sh  release_bundle.sh
src/devlens/: __main__.py  config.py  health.py  main.py
src/devlens/analysis/: pipeline.py
src/devlens/cache/: prompt_cache.py  result_cache.py
src/devlens/chat/: service.py
src/devlens/cli/: app.py  (+2 more)
tests/integration/: test_packaging_integrity.py
tests/unit/: test_chat_ollama_extract.py  test_chat_paths.py  test_chat_quality.py  test_config_placeholders.py  test_env_parsing_robustness.py  test_error_handler.py  test_event_watcher.py  test_file_scanner.py  test_file_scope_normalization.py  test_json_contract.py  test_json_error_contract.py  test_knowledge_reindex.py  test_llm_parser.py  test_packaging_wheel.py  test_reindex_command.py  test_report_command.py  test_retrieval_debug.py  test_scoped_retrieval_behavior.py  test_scoped_retrieval_fix.py  test_skill_scorer.py  test_start_and_tui_paths.py  test_static_analysis.py  test_tui_launch.py  test_watch_service.py
tui/: go.mod  go.sum  main.go  model.go
(+55 files in other folders)
